--- a/Controls/TextTab/MBTabItem.xaml
+++ b/Controls/TextTab/MBTabItem.xaml
@@ -1,6 +1,7 @@
 ﻿<TabItem x:Class="MultiBranchTexter.Controls.MBTabItem"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+         xmlns:local="clr-namespace:MultiBranchTexter"
          xmlns:c="clr-namespace:MultiBranchTexter.Controls"
          Loaded="TabItem_Loaded"
          MinHeight="24"
@@ -12,7 +13,9 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <c:MBTextBox x:Name="textBox" FontSize="14" VerticalScrollBarVisibility="Auto"
+        <c:MBTextBox x:Name="textBox" 
+                     FontSize="{Binding DataContext.TextFontSize, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"
+                     VerticalScrollBarVisibility="Auto"
                      AcceptsTab="True" AcceptsReturn="True" TextWrapping="Wrap" 
                      Template="{DynamicResource textBoxTemplate}"
                      Foreground="{DynamicResource Text.Foreground.BaseBrush}"
