--- a/Controls/TextTab/MBTabItem.xaml
+++ b/Controls/TextTab/MBTabItem.xaml
@@ -2,18 +2,21 @@
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:local="clr-namespace:MultiBranchTexter"
+         xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel"
          xmlns:c="clr-namespace:MultiBranchTexter.Controls"
          Loaded="TabItem_Loaded"
-         MinHeight="24"
-         Padding="0"
+         MinHeight="24" Padding="0"
          KeyDown="TabItem_KeyDown"
-         Template="{DynamicResource MBTabItemTemplate}">
+         Template="{StaticResource MBTabItemTemplate}">
+    <TabItem.DataContext>
+        <vm:TabItemViewModel/>
+    </TabItem.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <c:MBTextBox x:Name="textBox" 
+        <c:MBTextBox x:Name="textBox" Text="{Binding NodeText,UpdateSourceTrigger=PropertyChanged}"
                      FontSize="{Binding DataContext.TextFontSize, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"
                      VerticalScrollBarVisibility="Auto"
                      AcceptsTab="True" AcceptsReturn="True" TextWrapping="Wrap" 
