继续加特效

--- a/Controls/Window/MainWindow.xaml
+++ b/Controls/Window/MainWindow.xaml
@@ -14,7 +14,7 @@
     </local:MetroWindow.DataContext>
     
     <local:MetroWindow.InputBindings>
-        <KeyBinding Gesture="Ctrl+N" Command="{Binding NewFileCommand}" 
+        <KeyBinding Gesture="Ctrl+Shift+N" Command="{Binding NewFileCommand}" 
                     CommandParameter="{Binding ElementName=flowChart}"/>
         <KeyBinding Gesture="Ctrl+O" Command="{Binding OpenFileCommand}"
                     CommandParameter="{Binding ElementName=flowChart}"/>
