--- a/Controls/Panel/FlowChartContainer.xaml
+++ b/Controls/Panel/FlowChartContainer.xaml
@@ -1,9 +1,17 @@
-﻿<c:FlowChartBase x:Class="MultiBranchTexter.Controls.FlowChartContainer"
-                 x:Name="FCC"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:c="clr-namespace:MultiBranchTexter.Controls"
-                 Loaded="UserControl_Loaded">
+﻿<UserControl x:Class="MultiBranchTexter.Controls.FlowChartContainer"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:c="clr-namespace:MultiBranchTexter.Controls"
+             xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel"
+             Loaded="UserControl_Loaded">
+    <UserControl.DataContext>
+        <vm:FCCViewModel/>
+    </UserControl.DataContext>
+    <UserControl.InputBindings>
+        <KeyBinding Gesture="Ctrl+N" Command="{Binding NewNodeCommand}"/>
+        <KeyBinding Gesture="Delete" Command="{Binding DeleteCommand}"/>
+        <KeyBinding Gesture="Ctrl+F" Command="{Binding StartSearchCommand}"/>
+    </UserControl.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -33,23 +41,33 @@
             </c:AutoSizeCanvas>
             <ScrollViewer.ContextMenu>
                 <ContextMenu x:Name="sv_cm">
-                    <MenuItem x:Name="addNodeItem" Header="新建节点" Click="addItem_Click"/>
-                    <MenuItem x:Name="unitXMenuItem" Header="统一横坐标">
-                        <MenuItem x:Name="xavg" Header="平均值" Click="XItem_Click"/>
-                        <MenuItem x:Name="xmin" Header="最小值" Click="XItem_Click"/>
-                        <MenuItem x:Name="xmax" Header="最大值" Click="XItem_Click"/>
+                    <MenuItem Header="新建节点(Ctrl+N)" Command="{Binding NewNodeCommand}"/>
+                    <MenuItem Header="统一横坐标" IsEnabled="{Binding SelectedNodes,
+                        Converter={StaticResource listToBoolCvt}, ConverterParameter=1}">
+                        <MenuItem Header="平均值" Command="{Binding UniteXCommand}"
+                                  CommandParameter="avg"/>
+                        <MenuItem Header="最小值" Command="{Binding UniteXCommand}"
+                                  CommandParameter="min"/>
+                        <MenuItem Header="最大值" Command="{Binding UniteXCommand}"
+                                  CommandParameter="max"/>
                     </MenuItem>
-                    <MenuItem x:Name="unitYMenuItem" Header="统一纵坐标">
-                        <MenuItem x:Name="yavg" Header="平均值" Click="YItem_Click"/>
-                        <MenuItem x:Name="ymin" Header="最小值" Click="YItem_Click"/>
-                        <MenuItem x:Name="ymax" Header="最大值" Click="YItem_Click"/>
+                    <MenuItem Header="统一纵坐标" IsEnabled="{Binding SelectedNodes,
+                        Converter={StaticResource listToBoolCvt}, ConverterParameter=1}">
+                        <MenuItem Header="平均值" Command="{Binding UniteYCommand}"
+                                  CommandParameter="avg"/>
+                        <MenuItem Header="最小值" Command="{Binding UniteYCommand}"
+                                  CommandParameter="min"/>
+                        <MenuItem Header="最大值" Command="{Binding UniteYCommand}"
+                                  CommandParameter="max"/>
                     </MenuItem>
-                    <MenuItem x:Name="deleteItem" Header="删除节点" Click="deleteItem_Click"/>
+                    <MenuItem Header="删除节点(Delete)" Command="{Binding DeleteCommand}"
+                              IsEnabled="{Binding SelectedNodes,
+                        Converter={StaticResource listToBoolCvt}}"/>
                 </ContextMenu>
             </ScrollViewer.ContextMenu>
         </ScrollViewer>
         <!--搜索框-->
-        <c:NodeSearchBox x:Name="searchBox" Visibility="Hidden"
+        <c:NodeSearchBox x:Name="searchBox" Visibility="{Binding SearchBoxVisibility, Mode=TwoWay}"
                          VerticalAlignment="Top" HorizontalAlignment="Right"/>
         <!--框选框-->
         <c:NegaBorder x:Name="selectBorder" Grid.Row="0"
@@ -70,4 +88,4 @@
                        VerticalAlignment="Center"/>
         </StackPanel>
     </Grid>
-</c:FlowChartBase>
+</UserControl>
