--- a/Controls/Window/MainWindow.xaml
+++ b/Controls/Window/MainWindow.xaml
@@ -82,26 +82,32 @@
                       M0,4 6,4 M3,1 3,7"/>
             <Separator Width="1" Margin="4" Background="{DynamicResource ThemeBrush}" Opacity="0.5"
                        Style="{DynamicResource {x:Static ToolBar.SeparatorStyleKey}}" />
-            <Border Margin="6,1,6,1" BorderThickness="1,0,0,1" BorderBrush="{DynamicResource ThemeBrush}">
-                <TextBlock TextAlignment="Left" Width="400" Margin="4,0,0,0"
-                           Text="{Binding FileName}" Foreground="{DynamicResource Foreground.BaseBrush}" 
-                           VerticalAlignment="Center">
-                    <TextBlock.Style>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="ToolTip" Value="{Binding Text, RelativeSource={RelativeSource Self}}"/>
-                            <Style.Triggers>
-                                <Trigger Property="Text" Value="">
-                                    <Setter Property="ToolTip" Value="{x:Null}"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
+            <Border Margin="6,1,6,1" BorderThickness="1,0,0,1" 
+                    Width="400" BorderBrush="{DynamicResource ThemeBrush}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock TextAlignment="Left" Margin="4,0,0,0" 
+                               Text="{Binding FileName}" Grid.Column="0"
+                               Foreground="{DynamicResource Foreground.BaseBrush}" 
+                               VerticalAlignment="Center">
+                        <TextBlock.Style>
+                            <Style TargetType="{x:Type TextBlock}">
+                                <Setter Property="ToolTip" Value="{Binding Text, RelativeSource={RelativeSource Self}}"/>
+                                <Style.Triggers>
+                                    <Trigger Property="Text" Value="">
+                                        <Setter Property="ToolTip" Value="{x:Null}"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBlock.Style>
+                    </TextBlock>
+                    <TextBlock Text="{Binding IsModified, ElementName=flowChart}" Grid.Column="1" 
+                               Foreground="{DynamicResource Foreground.BaseBrush}"/>
+                </Grid>
             </Border>
-            <Button Width="28" ToolTip="浏览文件"
-                    Style="{DynamicResource generalButtonStyle}"
-                    Content="M6,10 10,12 14,10 16,6 14,2 10,0 6,2 4,6 Z
-                    M6,10 L0,16"/>
             <Separator Width="1" Margin="4" Background="{DynamicResource ThemeBrush}" Opacity="0.5"
                        Style="{DynamicResource {x:Static ToolBar.SeparatorStyleKey}}" />
             <Button x:Name="outPutBtn" Width="28"
