--- a/App.xaml
+++ b/App.xaml
@@ -6,9 +6,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary x:Name="BaseDictionary" Source="Resources/Dictionary.xaml"/>
                 <ResourceDictionary Source="Resources/WindowResources.xaml"/>
                 <ResourceDictionary Source="Resources/FCCResources.xaml"/>
-                <ResourceDictionary Source="Resources/Dictionary.xaml"/>
                 <!--把换色字典放在最后-->
                 <ResourceDictionary Source="Resources/LightColorDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
