--- a/Controls/Window/MainWindow.xaml
+++ b/Controls/Window/MainWindow.xaml
@@ -1,13 +1,11 @@
 ﻿<local:MetroWindow x:Class="MultiBranchTexter.MainWindow"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                    xmlns:local="clr-namespace:MultiBranchTexter"
                    xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel"
                    xmlns:c="clr-namespace:MultiBranchTexter.Controls"
                    Style="{StaticResource MetroWindowStyle}"
-                   mc:Ignorable="d"
+                   WindowStartupLocation="CenterScreen"
                    Title="MultiBranchTexter" Height="450" Width="800">
     <local:MetroWindow.DataContext>
         <vm:MainViewModel/>
@@ -74,6 +72,8 @@
                     Content="M0,16 5,4 L10,16 M2,11 L8,11
                       M12,16 14,11.2 16,16
                       M10,4 16,4"/>
+            <TextBlock Text="{Binding TextFontSize}" Width="14" VerticalAlignment="Center"
+                       TextAlignment="Center" Foreground="{DynamicResource Foreground.BaseBrush}"/>
             <Button ToolTip="字体放大" Width="28"
                     Command="{Binding FontSizeUpCommand}"
                     Style="{DynamicResource generalButtonStyle}"
