--- a/Resources/WindowResources.xaml
+++ b/Resources/WindowResources.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:MultiBranchTexter">
+                    xmlns:local="clr-namespace:MultiBranchTexter"
+                    xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel">
     
     <!--标题栏的按钮样式-->
     <Style x:Key="ThemeBtnStyle" TargetType="{x:Type Button}">
@@ -98,23 +99,89 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-    <!--<ControlTemplate x:Key="SliderTemp" TargetType="{x:Type Slider}">
-        <Track x:Name="PART_Track" HorizontalAlignment="Stretch">
-            <Track.IncreaseRepeatButton>
-                <RepeatButton Style="{StaticResource ScrollBarPageButton}" Command="Slider.IncreaseLarge"/>
-            </Track.IncreaseRepeatButton>
-            <Track.DecreaseRepeatButton>
-                <RepeatButton Style="{StaticResource ScrollBarPageButton}" Command="Slider.DecreaseLarge" Foreground="{TemplateBinding Foreground}"/>
-            </Track.DecreaseRepeatButton>
-            <Track.Thumb>
-                <Thumb Style="{StaticResource Slider_Thumb}" Foreground="{TemplateBinding Foreground}"/>
-            </Track.Thumb>
-        </Track>
-    </ControlTemplate>-->
+    <!--颜色滑条两边的样式-->
+    <Style x:Key="colorRBStyle" TargetType="{x:Type RepeatButton}">
+        <Setter Property="Height" Value="6"/>
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="IsTabStop" Value="False"/>
+        <Style.Triggers>
+            <Trigger Property="Tag" Value="Decrease">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type RepeatButton}">
+                            <Border Background="{TemplateBinding Foreground}"
+                                    CornerRadius="3,0,0,3"/>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+            <Trigger Property="Tag" Value="Increase">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type RepeatButton}">
+                            <Border Background="{DynamicResource MiddleBrush}"
+                                    CornerRadius="0,3,3,0" BorderThickness="0,1,1,1"
+                                    BorderBrush="{TemplateBinding Foreground}"/>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="colorThumb" TargetType="{x:Type Thumb}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Thumb}">
+                    <Border Name="PART_Back" BorderBrush="{TemplateBinding Foreground}" Background="#FFDDDDDD" 
+                            BorderThickness="1" CornerRadius="3" Width="12" Height="16">
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="PART_Back" Property="Background" Value="White"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="colorSliderStyle" TargetType="{x:Type Slider}">
+        <Setter Property="Minimum" Value="0"/>
+        <Setter Property="Maximum" Value="255"/>
+        <Setter Property="SmallChange" Value="1"/>
+        <Setter Property="LargeChange" Value="1"/>
+        <Setter Property="TickFrequency" Value="1"/>
+        <Setter Property="IsMoveToPointEnabled" Value="True"/>
+        <Setter Property="AutoToolTipPlacement" Value="TopLeft"/>
+        <Setter Property="Margin" Value="4"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Slider}">
+                    <Track x:Name="PART_Track" HorizontalAlignment="Stretch">
+                        <Track.IncreaseRepeatButton>
+                            <RepeatButton Style="{StaticResource colorRBStyle}" 
+                                          Tag="Increase" Command="Slider.IncreaseLarge"
+                                          Foreground="{TemplateBinding Foreground}"/>
+                        </Track.IncreaseRepeatButton>
+                        <Track.DecreaseRepeatButton>
+                            <RepeatButton Style="{StaticResource colorRBStyle}"
+                                          Tag="Decrease" Command="Slider.DecreaseLarge" 
+                                          Foreground="{TemplateBinding Foreground}"/>
+                        </Track.DecreaseRepeatButton>
+                        <Track.Thumb>
+                            <Thumb Style="{StaticResource colorThumb}" 
+                                   Foreground="{TemplateBinding Foreground}"/>
+                        </Track.Thumb>
+                    </Track>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
 
     <!--窗体控件模板-->
     <ControlTemplate x:Key="MetroWindowTemplate" TargetType="{x:Type local:MetroWindow}">
-        <Border Background="Transparent" RenderTransformOrigin="0.5,0.5">
+        <Border Background="Transparent">
             <Grid x:Name="LayoutRoot" Background="{DynamicResource ThemeBrush}"
                   RenderTransformOrigin="0.5,0.5">
                 <Grid.RowDefinitions>
@@ -156,25 +223,33 @@
                     <ContentPresenter x:Name="CP" Opacity="0"/>
                 </AdornerDecorator>
                 <!--设置栏-->
-                <Border x:Name="UpperBd" Grid.Row="1" Grid.RowSpan="2" IsHitTestVisible="False"
-                        Background="Transparent"/>
                 <Grid x:Name="SettingPanel" Grid.Row="1" Height="0" Opacity="0">
-                    <CheckBox x:Name="darkModeBtn" Content="深色模式" Template="{StaticResource settingCheckBox}"/>
-                    <!--<Slider x:Name="colorR" IsMoveToPointEnabled="True" AutoToolTipPlacement="TopLeft" 
-                            Margin="12,2,12,2" TickFrequency="1" Maximum="128" SmallChange="1" LargeChange="1"
-                            Background="Transparent" Template="{StaticResource SliderTemp}" Foreground="#FFFF0000"/>
-                    <Slider x:Name="colorG" IsMoveToPointEnabled="True" AutoToolTipPlacement="TopLeft" 
-                            Margin="12,2,12,2" TickFrequency="1" Maximum="128" SmallChange="1" LargeChange="1" 
-                            Background="Transparent" Template="{StaticResource SliderTemp}" Foreground="#FF00FF00"/>
-                    <Slider x:Name="colorB" IsMoveToPointEnabled="True" AutoToolTipPlacement="TopLeft" 
-                            Margin="12,2,12,2" TickFrequency="1" Maximum="128" SmallChange="1" LargeChange="1" 
-                            Background="Transparent" Template="{StaticResource SliderTemp}" Foreground="#FF0000FF"/>-->
+                    <Grid.DataContext>
+                        <vm:SettingViewModel/>
+                    </Grid.DataContext>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Orientation="Vertical" Grid.Column="0" Margin="6">
+                        <CheckBox x:Name="darkModeBtn" Content="深色模式"
+                                  IsChecked="{Binding IsDarkMode}"
+                                  Template="{StaticResource settingCheckBox}"/>
+                        <Slider x:Name="colorR" Style="{StaticResource colorSliderStyle}"
+                                Foreground="#FFFF0000" Value="{Binding ColorR}"/>
+                        <Slider x:Name="colorG" Style="{StaticResource colorSliderStyle}" 
+                                Foreground="#FF00FF00" Value="{Binding ColorG}"/>
+                        <Slider x:Name="colorB" Style="{StaticResource colorSliderStyle}" 
+                                Foreground="#FF0000FF" Value="{Binding ColorB}"/>
+                    </StackPanel>
                 </Grid>
+                <Border x:Name="UpperBd" Grid.Row="2" IsHitTestVisible="False"
+                        Background="Transparent"/>
             </Grid>
         </Border>
         <ControlTemplate.Triggers>
             <Trigger Property="WindowState" Value="Maximized">
-                <Setter Property="Margin" Value="6,6,6,0" TargetName="LayoutRoot"/>
+                <Setter Property="Margin" Value="6" TargetName="LayoutRoot"/>
             </Trigger>
             <Trigger Property="ShowSettings" Value="True">
                 <Setter Property="Background" Value="#80808080" TargetName="UpperBd"/>
