--- a/Controls/Window/MainWindow.xaml
+++ b/Controls/Window/MainWindow.xaml
@@ -132,9 +132,14 @@
                 <ColumnDefinition Width="{Binding WorkTabWidth}"/>
             </Grid.ColumnDefinitions>
             <c:FlowChartContainer x:Name="flowChart" Grid.Column="0" />
-            <TabControl x:Name="workTabControl" Grid.Column="1" Padding="0" 
+            <TabControl x:Name="workTabControl" Grid.Column="1" Padding="0">
+                <TabItem Header="测试中">
+                    <c:TextNodePresenter/>
+                </TabItem>
+            </TabControl>
+            <!--<TabControl x:Name="workTabControl" Grid.Column="1" Padding="0" 
                         ItemsSource="{Binding WorkTabs, Mode=TwoWay}"
-                        SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"/>
+                        SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"/>-->
         </Grid>
     </Grid>
 
