--- a/Controls/TextFragmentPresenter.xaml
+++ b/Controls/TextFragmentPresenter.xaml
@@ -1,24 +1,25 @@
 ﻿<UserControl x:Class="MultiBranchTexter.Controls.TextFragmentPresenter"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Margin="0,0,0,20">
+    <Grid MouseEnter="Grid_MouseEnter" MouseLeave="Grid_MouseLeave">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <StackPanel x:Name="opContainer" Orientation="Vertical" Grid.Row="0"/>
-        <TextBox x:Name="contentContainer" Grid.Row="1" 
+        <Border Grid.Row="0" Background="#60808080" BorderBrush="Green" BorderThickness="2"/>
+        <TextBox x:Name="opContainer" Grid.Row="0" Margin="2" Height="0"
+                 Background="Transparent"
                  AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap"
-                 LostFocus="fragment_LostFocus"/>
-
-        <Button x:Name="addOpBtn" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top"
-                Width="20" Height="8" Click="addOpBtn_Click">
-            +
-        </Button>
-        <Button x:Name="addFragmentBtn" Grid.Row="2" Width="40" HorizontalAlignment="Left"
-                Click="addFragmentBtn_Click"/>
-        <Button x:Name="closeFragmentBtn" Grid.Row="2" Width="40" HorizontalAlignment="Right"
-                Click="closeFragmentBtn_Click"/>
+                 LostFocus="Fragment_LostFocus"/>
+        <TextBox x:Name="contentContainer" Grid.Row="1" 
+                 Background="Transparent"
+                 AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap"
+                 LostFocus="Fragment_LostFocus"
+                 PreviewKeyDown="Content_KeyDown"
+                 TextChanged="Content_TextChanged"/>
+        <CheckBox x:Name="showHideOpBtn" Template="{StaticResource fragmentOperationCheckBoxTemplate}"
+                  Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top"
+                  Margin="0,-10,0,0" Click="ShowHideOpBtn_Click" Visibility="Hidden"/>
     </Grid>
 </UserControl>
