--- a/Controls/TextFragmentPresenter.xaml
+++ b/Controls/TextFragmentPresenter.xaml
@@ -1,20 +1,18 @@
 ﻿<UserControl x:Class="MultiBranchTexter.Controls.TextFragmentPresenter"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Margin="0,0,0,20">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid MouseEnter="Grid_MouseEnter" MouseLeave="Grid_MouseLeave">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Background="#60808080" BorderBrush="Green" BorderThickness="2"/>
-        <TextBox x:Name="opContainer" Grid.Row="0" Margin="2" Height="0"
-                 Background="Transparent"
-                 AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap"
+        <TextBox x:Name="opContainer" Grid.Row="0" Height="2"
+                 Template="{StaticResource operationTextBoxTemplate}"
+                 Style="{StaticResource fragmentPresenterTextBoxStyle}"
                  LostFocus="Fragment_LostFocus"/>
         <TextBox x:Name="contentContainer" Grid.Row="1" 
-                 Background="Transparent"
-                 AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap"
+                 Template="{StaticResource contentTextBoxTemplate}"
+                 Style="{StaticResource fragmentPresenterTextBoxStyle}"
                  LostFocus="Fragment_LostFocus"
                  PreviewKeyDown="Content_KeyDown"
                  TextChanged="Content_TextChanged"/>
