--- a/Controls/TextTab/MBTabItem.xaml
+++ b/Controls/TextTab/MBTabItem.xaml
@@ -16,14 +16,25 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <c:MBTextBox x:Name="textBox" Text="{Binding NodeText,UpdateSourceTrigger=PropertyChanged}"
+        <!--<c:MBTextBox x:Name="textBox" Text="{Binding NodeText,UpdateSourceTrigger=PropertyChanged}"
                      FontSize="{Binding DataContext.TextFontSize, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"
                      VerticalScrollBarVisibility="Auto"
                      AcceptsTab="True" AcceptsReturn="True" TextWrapping="Wrap" 
                      Template="{DynamicResource textBoxTemplate}"
                      Foreground="{DynamicResource Text.Foreground.BaseBrush}"
                      CaretBrush="{DynamicResource ThemeBrush}"
-                     Background="{DynamicResource MainBrush}"/>
+                     Background="{DynamicResource MainBrush}"/>-->
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*" MinHeight="200"/>
+                </Grid.RowDefinitions>
+                <StackPanel x:Name="fragmentContainer" Grid.Row="0" Orientation="Vertical"/>
+                <Border Grid.Row="1" Background="Transparent" 
+                        MouseLeftButtonDown="Border_MouseLeftButtonDown"/>
+            </Grid>
+        </ScrollViewer>
         <!--下方信息栏-->
         <c:TabEnd x:Name="tabEnd" Grid.Row="1" HorizontalAlignment="Stretch"/>
     </Grid>
